# MelvinRS

./: Cargo.toml  Dockerfile
assets/: MelvinRS.xcf
src/: commands.rs  main.rs
src/commands/: help.rs  mod.rs
src/commands/network/: ping.rs
src/commands/tools/: roll.rs
