[package]
name = "melvin_rs"
version = "0.0.1"
authors = ["HiveMind Studios"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serenity = "0.12"
songbird = { version = "0.2.2", features = ["yt-dlp", "tokio", "serenity"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
