[package]
name = "melvin_rs"
version = "0.0.1"
authors = ["HiveMind Studios"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
poise = "0.6.1"
songbird = { version = "0.4.0", features = ["builtin-queue", "serenity"] }
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = "0.4.33"
timeago = "0.4.2"
fancy-regex = "0.13.0"